# fastapi_hotels

./: .dockerignore  .env.example  .env.test  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  docker-compose.ci.yaml  docker-compose.runner.yaml  docker-compose.test.yaml  docker-compose.yaml  main.py  nginx.conf  pyproject.toml
scripts/: run_cert_renew.sh
src/: config.py  database.py  exceptions.py  main.py
src/api/: __init__.py  auth.py  bookings.py  dependencies.py  facilities.py  hotels.py  images.py  rooms.py  utils.py
src/connectors/: __init__.py  cache.py  redis.py
src/migrations/: env.py
src/migrations/versions/: 2025_10_23_1848-faecc177f8d0_add_hotels.py  2025_10_23_1849-cf59239797d8_add_rooms.py  2026_01_28_1900-02b7c7245e61_add_users.py  2026_02_21_1656-dcb43a10a45b_add_bookings.py  2026_03_01_0930-3ca2aa984cdd_add_facilities.py  2026_03_02_1143-23a08fd14361_add_facilities_uniq_constraint.py  2026_05_07_0733-e18ff2f3f1fd_hotels_without_stars.py  de572a2462dd_add_rooms.py  (+1 more)
src/models/: __init__.py  base.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/repositories/: __init__.py  base.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py  utils.py
src/schemas/: __init__.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/services/: __init__.py  auth.py  base.py  bookings.py  facilities.py  hotels.py  images.py  rooms.py  users.py
src/tasks/: __init__.py  celery_app.py  helpers.py  tasks.py
src/utils/: db_manager.py
tests/: conftest.py
tests/utils/: test_db_manager.py
(+12 files in other folders)
